피드백 수정

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/icon-192x192-rounded.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
@@ -22,7 +22,7 @@
       "purpose": "maskable"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-512x512-rounded.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
